--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,7 +17,7 @@ FOREACH(build ${LINALGWRAP_BUILD_TYPES})
 	set_target_properties(
 		linalgwrap_tests_${build}
 		PROPERTIES
-		LINK_FLAGS "${LINKER_FLAGS}"
+		LINK_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${CMAKE_EXE_LINKER_FLAGS_${build}}"
 		LINKER_LANGUAGE "CXX"
 		COMPILE_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_${build}}"
 		COMPILE_DEFINITIONS "${LINALGWRAP_DEFINITIONS};${LINALGWRAP_DEFINITIONS_${build}}"
