ParameterMap class and tests
Data structure to hold and update mappings string -> data which can be
used to keep arbitrary data in a dictonary-like structure.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ set(LINALGWRAP_TESTS_SOURCES
 	ExceptionTests.cc
 	SubscriptionTests.cc
 	SmallMatrixTests.cc
+	ParameterMapTests.cc
 	LazyMatrixWrapperTests.cc
 	LazyMatrixProductTests.cc
 	LazyMatrixSumTests.cc
