Tests for LazyMatrix_i default code
for operator* of Lazy*Stored and the implementation in
LazyMatrixExpression.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ set(LINALGWRAP_TESTS_SOURCES
 	LazyMatrixWrapperTests.cc
 	LazyMatrixProductTests.cc
 	LazyMatrixSumTests.cc
+	LazyMatrix_i_Tests.cc
 	ScaleViewTests.cc
 	TransposeViewTests.cc
 	BlockViewTests.cc
