Replace SmallMatrix by ArmadilloMatrix
We replace the current implementation of SmallMatrix by a using
statement. This allows to easily switch between different possible
SmallMatrix implementations.

Furthermore we implemented an armadillo-based matrix as SmallMatrix.
This time we properly make use of the memory order armadillo internally
uses (column-major storage) by using a transposed armadillo matrix.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ set(LINALGWRAP_TESTS_SOURCES
 	ExceptionTests.cc
 	RangeTests.cc
 	SubscriptionTests.cc
-	SmallMatrixTests.cc
+	ArmadilloMatrixTests.cc
 	ParameterMapTests.cc
 	LazyMatrixWrapperTests.cc
 	LazyMatrixProductTests.cc
