Add first example program
A tiny test program that demonstrates how algorithms can be coded
independent of the fact whether matrices are lazy or stored.

Also shows an implementation of the LazyMatrix_i interface.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,3 +58,8 @@ add_subdirectory(external)
 if(LINALGWRAP_ENABLE_TESTS) 
 	add_subdirectory(tests)
 endif()
+
+# Add subdirectories for the examples.
+if(LINALGWRAP_ENABLE_EXAMPLES)
+	add_subdirectory(examples)
+endif()
