--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,24 @@
+## ---------------------------------------------------------------------
+##
+## Copyright (C) 2016 by the linalgwrap authors
+##
+## This file is part of linalgwrap.
+##
+## linalgwrap is free software: you can redistribute it and/or modify
+## it under the terms of the GNU General Public License as published
+## by the Free Software Foundation, either version 3 of the License, or
+## (at your option) any later version.
+##
+## linalgwrap is distributed in the hope that it will be useful,
+## but WITHOUT ANY WARRANTY; without even the implied warranty of
+## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+## GNU General Public License for more details.
+##
+## You should have received a copy of the GNU General Public License
+## along with linalgwrap. If not, see <http://www.gnu.org/licenses/>.
+##
+## ---------------------------------------------------------------------
+
 language: cpp
 sudo: required
 dist: trusty
@@ -40,8 +61,8 @@ env:
     # Use a known-to-work rapidcheck seed
     - RC_PARAMS="seed=16920708173099178154 verbose_progress=1 verbose_shrinking=1"
   matrix:
-    # build with clang 3.5 and run release tests
-    - CXX_COMPILER="clang++-3.5" CC_COMPILER="clang-3.5" TESTCASE="linalgwrap_tests_RELEASE"
+    # build with default clang on Ubuntu Trusty (== clang 3.5) and run release tests
+    - CXX_COMPILER="clang++"     CC_COMPILER="clang"     TESTCASE="linalgwrap_tests_RELEASE"
     #
     # build with clang 3.8 and run debug tests
     - CXX_COMPILER="clang++-3.8" CC_COMPILER="clang-3.8" TESTCASE="linalgwrap_tests_DEBUG"
