--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -43,31 +43,28 @@ set(LINALGWRAP_TESTS_SOURCES
 
 # TODO have a benchmark test!
 
-# 
-# For each build type compile seperate tests.
-#
-FOREACH(build ${LINALGWRAP_BUILD_TYPES})
-	# add the test executable
-	add_executable(linalgwrap_tests_${build} ${LINALGWRAP_TESTS_SOURCES})
+drb_add_executable(linalgwrap_tests
+	DBGSUFFIX  "_DEBUG"
+	RELSUFFIX  "_RELEASE" 
+	FILES ${LINALGWRAP_TESTS_SOURCES}
+)
 
-	set_target_properties(
-		linalgwrap_tests_${build}
-		PROPERTIES
-		LINK_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${CMAKE_EXE_LINKER_FLAGS_${build}}"
-		LINKER_LANGUAGE "CXX"
-		COMPILE_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_${build}}"
-		COMPILE_DEFINITIONS "${LINALGWRAP_DEFINITIONS};${LINALGWRAP_DEFINITIONS_${build}}"
-	)
+drb_target_compile_definitions(ALL     linalgwrap_tests 
+	PRIVATE ${LINALGWRAP_DEFINITIONS})
+drb_target_compile_definitions(DEBUG   linalgwrap_tests 
+	PRIVATE ${LINALGWRAP_DEFINITIONS_DEBUG})
+drb_target_compile_definitions(RELEASE linalgwrap_tests 
+	PRIVATE ${LINALGWRAP_DEFINITIONS_RELEASE})
 
-	# link it with the appropriate linalgwrap library target
-	target_link_libraries(linalgwrap_tests_${build}
-		${LINALGWRAP_${build}_TARGET}
-	       	${LINALGWRAP_DEPENDENCIES}
-	       	${LINALGWRAP_${build}_DEPENDENCIES}
-	       	${LINALGWRAP_DEPENDENCIES_TEST}
-	)
+drb_target_link_libraries(ALL     linalgwrap_tests 
+	${LINALGWRAP_DEPENDENCIES} ${LINALGWRAP_DEPENDENCIES_TEST})
+drb_target_link_libraries(DEBUG   linalgwrap_tests 
+	${linalgwrap_DEBUG_TARGET} ${LINALGWRAP_DEPENDENCIES_DEBUG})
+drb_target_link_libraries(RELEASE linalgwrap_tests 
+	${linalgwrap_RELEASE_TARGET} ${LINALGWRAP_DEPENDENCIES_RELEASE})
 
-	# add it to list of test cases
-	add_test(NAME linalgwrap_tests_${build} COMMAND linalgwrap_tests_${build})
+# Add the test executables
+FOREACH(target ${linalgwrap_tests_TARGETS})
+	add_test(NAME ${target} COMMAND ${target})
 ENDFOREACH()
-		
+
