--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -23,23 +23,25 @@
 # rapidcheck
 #
 if (LINALGWRAP_ENABLE_TESTS AND NOT LINALGWRAP_WITH_EXTERNAL_RAPIDCHECK)
-	# compile the rapidcheck we have in the submodule.
-
-	# TODO Doing it this way is a hell of a mess ...
-	#      Is there no better way to do this?
-
-	# check it out if it is not already there:
+	#
+	# Add subdirectory
+	#
+	
+	# Check wether rapidcheck is already there.
 	if(NOT EXISTS "${CMAKE_CURRENT_LIST_DIR}/rapidcheck/CMakeLists.txt")
 		message(FATAL_ERROR "Could not include rapidcheck from submodule. Try \"git submodule update --init --recursive\"")
 	endif()
 
-	# make sure rapidcheck gets checked as well ...
+	# Set flags such that both rapidcheck tests and catch are built.
 	set(RC_ENABLE_TESTS ON CACHE BOOL "Build RapidCheck tests")
-	# We need catch:
 	set(RC_ENABLE_CATCH ON CACHE BOOL "Build Catch.hpp support")
 
-	# Add the rapidcheck stuff
+	# Add the rapidcheck subdirectory
 	add_subdirectory(rapidcheck)
+
+	#
+	# Adjust compiler flags
+	#
 
 	# Set some compiler options to make rapidcheck compile
 	enable_if_compiles(LINALGWRAP_RAPIDCHECK_EXTRA_FLAGS "-Wno-gnu-zero-variadic-macro-arguments")
@@ -47,6 +49,7 @@ if (LINALGWRAP_ENABLE_TESTS AND NOT LINALGWRAP_WITH_EXTERNAL_RAPIDCHECK)
 	enable_if_compiles(LINALGWRAP_RAPIDCHECK_EXTRA_FLAGS "-Wno-pedantic")
 	set(LINALGWRAP_RAPIDCHECK_EXTRA_FLAGS "${LINALGWRAP_RAPIDCHECK_EXTRA_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE}")
 
+	# Activate extra flags for all potential rapidcheck targets.
 	foreach(_potential_target
 			rapidcheck
 			rapidcheck_tests
@@ -68,15 +71,38 @@ if (LINALGWRAP_ENABLE_TESTS AND NOT LINALGWRAP_WITH_EXTERNAL_RAPIDCHECK)
 	# unset the extra flags
 	unset(LINALGWRAP_RAPIDCHECK_EXTRA_FLAGS)
 
-	# This is a hell of a hack to install the compiled library
+	#
+	# Install rapidcheck
+	#
 	if(BUILD_SHARED_LIBS)
-		install(FILES "${rapidcheck_BINARY_DIR}/librapidcheck.so" DESTINATION lib)
+		install(FILES "${rapidcheck_BINARY_DIR}/librapidcheck.so"
+			DESTINATION lib
+			COMPONENT library-rapidcheck
+		)
 	else()
-		install(FILES "${rapidcheck_BINARY_DIR}/librapidcheck.a" DESTINATION lib)
+		install(FILES "${rapidcheck_BINARY_DIR}/librapidcheck.a"
+			DESTINATION lib
+			COMPONENT library-rapidcheck
+		)
 	endif()
 
+	# Export definitions:
+	export(TARGETS rapidcheck
+		NAMESPACE Upstream::
+		FILE "${CMAKE_CURRENT_BINARY_DIR}/rapidcheckTargets.cmake"
+	)
+
+	# TODO this does not work, since we cannot define the export group
+	#      for the rapidcheck target.
+	# and install them appropriately:
+	#install(EXPORT rapidcheck
+	#	FILE "rapidcheckTargets.cmake"
+	#	NAMESPACE Upstream::
+	#	DESTINATION "${PackageModuleLocation}/rapidcheck"
+	#)
+
 	# Install catch
-	install(FILES ${rapidcheck_SOURCE_DIR}/ext/catch/single_include/catch.hpp DESTINATION include/${CMAKE_PROJECT_NAME})
+	install(FILES ${rapidcheck_SOURCE_DIR}/ext/catch/single_include/catch.hpp DESTINATION include)
 endif()
 
 if(LINALGWRAP_ENABLE_TESTS AND NOT LINALGWRAP_WITH_EXTERNAL_CATCH)
