Create version information available from library automatically
The version information available from linalgwrap/version.hh is now created
automatically by cmake from the provided project version, so version
numbers only have to be provided once.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,8 @@ project(linalgwrap VERSION 0.1.0)
 drb_setup_project(linalgwrap)
 
 # Global include directories for this project:
-include_directories("${linalgwrap_SOURCE_DIR}/src")
+include_directories("${linalgwrap_SOURCE_DIR}/src")  # for default sources
+include_directories("${linalgwrap_BINARY_DIR}/src")  # for generated sources
 
 # enable testing of this project
 enable_testing()
