Simplify DebugReleaseBuild interface
No drb_setup_project is required any more.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,6 @@ option(LINALGWRAP_ENABLE_EXAMPLES "Build linalgwrap examples" ON)
 # enable the new version feature introduced in cmake 3.0.0
 cmake_policy(SET CMP0048 NEW)
 project(linalgwrap VERSION 0.1.0)
-drb_setup_project(linalgwrap)
 
 # Global include directories for this project:
 include_directories("${linalgwrap_SOURCE_DIR}/src")  # for default sources
@@ -56,6 +55,9 @@ enable_testing()
 
 ##########################################################################
 # Setup hard and optional dependencies and find components
+
+# Determine and setup compiler flags:
+drb_setup_compiler_flags()
 
 # setup hard dependencies
 include(cmake/setup_dependencies.cmake)
