Use catch submodule, installing rapidcheck/catch optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,12 @@ set(PackageModuleLocation share/cmake)
 option(LINALGWRAP_ENABLE_TESTS "Build linalgwrap tests" ON)
 option(LINALGWRAP_ENABLE_EXAMPLES "Build linalgwrap examples" ON)
 
+option(LINALGWRAP_WITH_EXTERNAL_RAPIDCHECK "Use external rapidcheck from git repository (ON) or system-provided (OFF)." ON)
+option(LINALGWRAP_INSTALL_RAPIDCHECK "If LINALGWRAP_WITH_EXTERNAL_RAPIDCHECK is ON, should rapidcheck be installed as well?" OFF)
+
+option(LINALGWRAP_WITH_EXTERNAL_CATCH "Use external catch library from git repository (ON) or system-provided version (OFF)." ON)
+option(LINALGWRAP_INSTALL_CATCH "If LINALGWRAP_WITH_EXTERNAL_CATCH is ON, should catch be installed as well?" OFF)
+
 ##########################################################################
 # Project setup
 
