--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -22,7 +22,7 @@
 #
 # rapidcheck
 #
-if (LINALGWRAP_ENABLE_TESTS AND NOT LINALGWRAP_WITH_EXTERNAL_RAPIDCHECK)
+if (LINALGWRAP_ENABLE_TESTS AND LINALGWRAP_WITH_EXTERNAL_RAPIDCHECK)
 	#
 	# Add subdirectory
 	#
@@ -32,9 +32,8 @@ if (LINALGWRAP_ENABLE_TESTS AND NOT LINALGWRAP_WITH_EXTERNAL_RAPIDCHECK)
 		message(FATAL_ERROR "Could not include rapidcheck from submodule. Try \"git submodule update --init --recursive\"")
 	endif()
 
-	# Set flags such that both rapidcheck tests and catch are built.
+	# Set flags such that both rapidcheck tests are built.
 	set(RC_ENABLE_TESTS ON CACHE BOOL "Build RapidCheck tests")
-	set(RC_ENABLE_CATCH ON CACHE BOOL "Build Catch.hpp support")
 
 	# Add the rapidcheck subdirectory
 	add_subdirectory(rapidcheck)
@@ -74,37 +73,69 @@ if (LINALGWRAP_ENABLE_TESTS AND NOT LINALGWRAP_WITH_EXTERNAL_RAPIDCHECK)
 	#
 	# Install rapidcheck
 	#
-	if(BUILD_SHARED_LIBS)
-		install(FILES "${rapidcheck_BINARY_DIR}/librapidcheck.so"
-			DESTINATION lib
-			COMPONENT library-rapidcheck
-		)
-	else()
-		install(FILES "${rapidcheck_BINARY_DIR}/librapidcheck.a"
-			DESTINATION lib
-			COMPONENT library-rapidcheck
-		)
-	endif()
 
 	# Export definitions:
 	export(TARGETS rapidcheck
 		NAMESPACE Upstream::
-		FILE "${CMAKE_CURRENT_BINARY_DIR}/rapidcheckTargets.cmake"
+		FILE "${CMAKE_BINARY_DIR}/rapidcheckTargets.cmake"
 	)
 
-	# TODO this does not work, since we cannot define the export group
-	#      for the rapidcheck target.
-	# and install them appropriately:
-	#install(EXPORT rapidcheck
-	#	FILE "rapidcheckTargets.cmake"
-	#	NAMESPACE Upstream::
-	#	DESTINATION "${PackageModuleLocation}/rapidcheck"
-	#)
+	# And write a config file:
+	file(WRITE "${CMAKE_BINARY_DIR}/rapidcheckConfig.cmake"
+		"include(\"\${CMAKE_CURRENT_LIST_DIR}/rapidcheckTargets.cmake\")"
+	)
 
-	# Install catch
-	install(FILES ${rapidcheck_SOURCE_DIR}/ext/catch/single_include/catch.hpp DESTINATION include)
+	if(LINALGWRAP_INSTALL_RAPIDCHECK)
+		if(BUILD_SHARED_LIBS)
+			install(FILES "${rapidcheck_BINARY_DIR}/librapidcheck.so"
+				DESTINATION lib
+				COMPONENT library-rapidcheck
+			)
+		else()
+			install(FILES "${rapidcheck_BINARY_DIR}/librapidcheck.a"
+				DESTINATION lib
+				COMPONENT library-rapidcheck
+			)
+		endif()
+
+		# install the includes:
+		install(DIRECTORY "${rapidcheck_SOURCE_DIR}/include"
+			DESTINATION "."
+			COMPONENT devel-rapidcheck
+			FILES_MATCHING REGEX ".*\\.(h|hpp)$"
+		)
+
+		# TODO this does not work, since we cannot define the export group
+		#      for the rapidcheck target.
+		# and install them appropriately:
+		#install(EXPORT rapidcheck
+		#	FILE "rapidcheckTargets.cmake"
+		#	NAMESPACE Upstream::
+		#	DESTINATION "${PackageModuleLocation}/rapidcheck"
+		#)
+
+		message(STATUS "Enabled installation of external rapidcheck library.")
+	endif()
 endif()
 
-if(LINALGWRAP_ENABLE_TESTS AND NOT LINALGWRAP_WITH_EXTERNAL_CATCH)
-	# TODO download catch somewhere sensible and use that one
+#
+# Catch
+#
+if(LINALGWRAP_ENABLE_TESTS AND LINALGWRAP_WITH_EXTERNAL_CATCH)
+	# Check whether catch is already there.
+	if(NOT EXISTS "${CMAKE_CURRENT_LIST_DIR}/catch/include/catch.hpp")
+		message(FATAL_ERROR "Could not find catch submodule. Try \"git submodule update --init --recursive\"")
+	endif()
+
+	# Add dummy target
+	add_library(law_catch INTERFACE)
+	target_include_directories(law_catch INTERFACE "${CMAKE_CURRENT_LIST_DIR}/catch/include")
+
+	if(LINALGWRAP_INSTALL_CATCH)
+		install(FILES "${CMAKE_CURRENT_LIST_DIR}/catch/single_include/catch.hpp"
+			DESTINATION include
+			COMPONENT devel-catch
+		)
+		message(STATUS "Enabled installation of external catch header.")
+	endif()
 endif()
