Implement DiagonalMatrix wrapper for vectors

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,6 +30,7 @@ set(LINALGWRAP_TESTS_SOURCES
 	LazyMatrixProductTests.cc
 	LazyMatrixSumTests.cc
 	LazyMatrix_i_Tests.cc
+	DiagonalMatrixTests.cc
 	ScaleViewTests.cc
 	TransposeViewTests.cc
 	BlockViewTests.cc
