Fix error in travis.yml: Really do compiling with C++11

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ matrix:
       - sudo apt-get install -y ninja-build g++-4.9 $DEPEND_PKG
       compiler: clang
       env: CC_COMPILER="clang" CXX_COMPILER="clang++" TESTCASE="linalgwrap_tests_RELEASE"
-        EXTRA_OPTS="-DDRB_MAXIMUM_CXX_STANDARD=11
+        EXTRA_OPTS="-DDRB_MAXIMUM_CXX_STANDARD=11"
     #
     # Clang 3.8 (has c++14)
     - install:
