Add very basic builtin vector class.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -24,6 +24,7 @@
 #
 set(LINALGWRAP_TESTS_SOURCES
 	# Vector and Matrix LA interfaces
+	BuiltinVectorTests.cc
 	ArmadilloMatrixTests.cc
 	ArmadilloVectorTests.cc
 
