--- a/src/linalgwrap/CMakeLists.txt
+++ b/src/linalgwrap/CMakeLists.txt
@@ -25,6 +25,9 @@
 set(LINALGWRAP_SOURCES
 	version.cc
 	io/Mathematica.cc
+	Base/Solvers/SolverStateBase.cc
+	Base/Solvers/IterativeSolverKeys.cc
+	Base/Solvers/EigensolverBaseKeys.cc
 )
 
 # Dump the current version as an include file.
