--- a/src/linalgwrap/CMakeLists.txt
+++ b/src/linalgwrap/CMakeLists.txt
@@ -28,6 +28,7 @@ set(LINALGWRAP_SOURCES
 	Base/Solvers/SolverStateBase.cc
 	Base/Solvers/IterativeSolverKeys.cc
 	Base/Solvers/EigensolverBaseKeys.cc
+	Arpack/ArpackEigensolver.cc
 )
 
 # Dump the current version as an include file.
