Eigensystem top level interface

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -24,6 +24,7 @@
 #
 set(LINALGWRAP_TESTS_SOURCES
 	# Vector and Matrix LA interfaces
+# TODO	IteratorVectorTests.cc
 	BuiltinVectorTests.cc
 	ArmadilloMatrixTests.cc
 	ArmadilloVectorTests.cc
@@ -49,6 +50,7 @@ set(LINALGWRAP_TESTS_SOURCES
 	# Eigensolver
 	ArpackEigensolverTests.cc
 	ArmadilloEigensolverTests.cc
+	eigensystemTests.cc
 
 	# linear solver
 	solveTests.cc
