Selection of eigensolver via method parameter

--- a/src/linalgwrap/CMakeLists.txt
+++ b/src/linalgwrap/CMakeLists.txt
@@ -29,6 +29,7 @@ set(LINALGWRAP_SOURCES
 	Base/Solvers/IterativeSolverKeys.cc
 	Base/Solvers/EigensolverBaseKeys.cc
 	Arpack/ArpackEigensolver.cc
+	eigensystem.cc
 )
 
 # Dump the current version as an include file.
