--- a/examples/diagonal/CMakeLists.txt
+++ b/examples/diagonal/CMakeLists.txt
@@ -22,27 +22,5 @@
 #
 # The sources for this example executable
 #
-set(EXAMPLE_DIAGONAL_SOURCES
-	diagonal.cc)
-
-# Compile and link:
-add_executable(diagonal ${EXAMPLE_DIAGONAL_SOURCES})
-
-set_target_properties(
-	diagonal
-	PROPERTIES
-	LINK_FLAGS "${CMAKE_EXE_LINKER_FLAGS_${EXAMPLES_BUILD_TYPE}}" #${CMAKE_EXE_LINKER_FLAGS} are added
-	LINKER_LANGUAGE "CXX"
-	COMPILE_FLAGS "${CMAKE_CXX_FLAGS_${EXAMPLES_BUILD_TYPE}}" #${CMAKE_CXX_FLAGS} are added automaticaly
-	COMPILE_DEFINITIONS "${EXAMPLES_BUILD_TYPE}"
-)
-
-# setup definitions.
-target_compile_definitions(diagonal PRIVATE "${LINALGWRAP_DEFINITIONS};${LINALGWRAP_DEFINITIONS_${EXAMPLES_BUILD_TYPE}}")
-
-# link it with the appropriate linalgwrap library target
-target_link_libraries(diagonal 
-	${linalgwrap_${EXAMPLES_BUILD_TYPE}_TARGET}
-	${LINALGWRAP_DEPENDENCIES}
-	${LINALGWRAP_DEPENDENCIES_${EXAMPLES_BUILD_TYPE}}
-)
+add_executable(diagonal diagonal.cc)
+setup_example_target(diagonal)
