Implement a rescue solve for failed eigenproblems

--- a/src/linalgwrap/CMakeLists.txt
+++ b/src/linalgwrap/CMakeLists.txt
@@ -33,6 +33,7 @@ set(LINALGWRAP_SOURCES
 	Arpack/ArpackEigensolver.cc
 	LinearSolver.cc
 	EigensystemSolver.cc
+	rescue.cc
 )
 
 # Dump the current version as an include file.
