--- a/src/linalgwrap/CMakeLists.txt
+++ b/src/linalgwrap/CMakeLists.txt
@@ -35,7 +35,7 @@ set(LINALGWRAP_SOURCES
 
 # Dump the current version as an include file.
 include_krims_cmake_module(WriteVersionHeader)
-WRITE_VERSION_HEADER("${CMAKE_BINARY_DIR}/src/linalgwrap/version_defs.hh")
+WRITE_VERSION_HEADER("${linalgwrap_BINARY_DIR}/src/linalgwrap/version_defs.hh")
 
 # add the libraries for Debug and Release:
 drb_add_library(linalgwrap
