--- a/src/linalgwrap/CMakeLists.txt
+++ b/src/linalgwrap/CMakeLists.txt
@@ -46,16 +46,16 @@ drb_add_library(linalgwrap
 	FILES ${LINALGWRAP_SOURCES}
 )
 
-drb_set_target_properties(ALL linalgwrap 
+drb_set_target_properties(ALL linalgwrap
 	PROPERTIES
 	VERSION "${PROJECT_VERSION}"
 )
 
-drb_target_compile_definitions(ALL     linalgwrap 
+drb_target_compile_definitions(ALL     linalgwrap
 	PUBLIC ${LINALGWRAP_DEFINITIONS})
-drb_target_compile_definitions(DEBUG   linalgwrap 
+drb_target_compile_definitions(DEBUG   linalgwrap
 	PUBLIC ${LINALGWRAP_DEFINITIONS_DEBUG})
-drb_target_compile_definitions(RELEASE linalgwrap 
+drb_target_compile_definitions(RELEASE linalgwrap
 	PUBLIC ${LINALGWRAP_DEFINITIONS_RELEASE})
 
 drb_target_link_libraries(ALL     linalgwrap ${LINALGWRAP_DEPENDENCIES})
@@ -73,12 +73,12 @@ install(TARGETS ${linalgwrap_TARGETS}
 )
 
 # install the includes:
-install(DIRECTORY . 
+install(DIRECTORY .
 	DESTINATION "include/linalgwrap"
 	COMPONENT devel
 	FILES_MATCHING PATTERN "*.hh"
 )
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/version_defs.hh"
+install(FILES "${linalgwrap_BINARY_DIR}/src/linalgwrap/version_defs.hh"
 	DESTINATION "include/linalgwrap"
 	COMPONENT devel
 )
