--- a/.travis.yml
+++ b/.travis.yml
@@ -53,18 +53,18 @@ matrix:
       env: CC_COMPILER="clang" CXX_COMPILER="clang++" TEST_REGEX="linalgwrap_tests_"
         EXTRA_OPTS="-DDRB_MAXIMUM_CXX_STANDARD=11"
     #
-    # Clang 3.8 (has c++14)
+    # Clang 3.9 (has c++14)
     - install:
       # Repo for libstdc++-4.9-dev (libstdc++ of gcc 4.8 is buggy)
       - sudo add-apt-repository -y "ppa:ubuntu-toolchain-r/test"
-      # Repo for clang-3.8
+      # Repo for clang-3.9
       - sudo wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
-      - sudo add-apt-repository -y "deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-3.8 main"
+      - sudo add-apt-repository -y "deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-3.9 main"
       # Update and install
       - sudo apt-get update -qq
-      - sudo apt-get install -y ninja-build clang-3.8 libstdc++-4.9-dev $DEPEND_PKG
+      - sudo apt-get install -y ninja-build clang-3.9 libstdc++-4.9-dev $DEPEND_PKG
       compiler: clang
-      env: CC_COMPILER="clang-3.8" CXX_COMPILER="clang++-3.8" TEST_REGEX="linalgwrap_tests_"
+      env: CC_COMPILER="clang-3.9" CXX_COMPILER="clang++-3.9" TEST_REGEX="linalgwrap_tests_"
     #
     # gcc-4.8 (c++11 and without tests, since rapidcheck does not compile like this)
     - install:
@@ -77,7 +77,7 @@ matrix:
       # Repo for g++-5
       - sudo add-apt-repository -y "ppa:ubuntu-toolchain-r/test"
       # Update and install
-      - sudo apt-get update
+      - sudo apt-get update -qq
       - sudo apt-get install -y ninja-build g++-5 $DEPEND_PKG
       compiler: gcc
       env: CC_COMPILER="gcc-5" CXX_COMPILER="g++-5" TEST_REGEX="linalgwrap_tests_"
